--- a/BiodataKu.html
+++ b/BiodataKu.html
@@ -9,7 +9,7 @@
 <frame src="web.html">
 <frameset cols="20%,*">
 <frame scrolling="no" src="menu.html">
-<frame name="isi" src="Biodata.html">
+<frame name="isi" src="index.html">
 <frameset rows="20%,*"  border=10 bordercolor=yellow>
 <frame src="trims.html">
 </frameset>
