--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
 <h2><font color=blue”>Daftar Menu</font></h2>
 <menu>
 <br><br>
-<A Href="biodata.html">
+<A Href="index.html">
 <img src="fira02.jpg" width="100" height="75" border="0"></A><BR>
 <A Href="menu.html">Klik  Disini!</A><br>
 <A Href="trims.html">Belajar Membuat
